Change bg color

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -11,7 +11,7 @@
 /* Styles */
 
 /* Colors (gruvbox) */
-@define-color black	#282828;
+@define-color black	#1d2021;
 @define-color red	#cc241d;
 @define-color green	#98971a;
 @define-color yellow	#d79921;
@@ -60,7 +60,7 @@
 
 /* The whole bar */
 #waybar {
-	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
+	background: @black; /* #282828e0 */
 	color: @white;
 	font-family: Free Sans, "Font Awesome 6 Free";
 	font-size: 10pt;
