--- a/waybar/style.css
+++ b/waybar/style.css
@@ -56,9 +56,9 @@
 #waybar {
 	background: @bg;
 	color: @white;
-	font-family: Free Sans, "Font Awesome 6 Free";
-	font-size: 10pt;
-	/*font-weight: bold;*/
+	font-family: JetBrains Mono, "Font Awesome 6 Free";
+	font-size: 8pt;
+	font-weight: bold;
 }
 
 /* Each module */
@@ -278,5 +278,9 @@
 	font-size: 11pt;
 	color: @unfocused;
 	background: transparent;
+}
+
+#custom-player {
+	padding-right: 10px;
 }
 
